<?xml version="1.0"?>
<package format="2">
  <name>road_sweeper</name>
  <version>0.0.1</version>
  <description>The road_sweeper package</description>
  <maintainer email="wangruifan2003@qq.com">wang-ruifan</maintainer>
  <license>Apache 2.0</license>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>autoware_msgs</depend>
  <depend>vector_map_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>can_msgs</depend>
  <depend>socketcan_bridge</depend>
  <depend>std_srvs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>